2006-05-16  Stephen J. Turnbull  <stephen@xemacs.org>

	* XEmacs 21.5.27 "fiddleheads" is released.

2006-02-27  Joachim Schrod  <jschrod@acm.org>

	* mule-coding.c (iso2022_detect): Handle Latin-1 encoded files
	that have several high-byte chars in a row.

2006-05-08  Jerry James  <james@xemacs.org>

	* number.c (Fcanonicalize_number): Use EMACS_INT instead of int,
	which fixes bignum arithmetic on 64-bit platforms.
	* number.h (bignum_fits_emacs_int_p): New macro.
	* number.h (bignum_to_emacs_int): New macro.

2006-03-30  Stephen J. Turnbull  <stephen@xemacs.org>

	* objects-x.c (x_initialize_font_instance):
	Ensure that duplicative X font gets freed if we have an Xft font.
	Remove some redundant debug output.
	Comment on frequency of calls to this function.

2006-05-08  Stephen J. Turnbull  <stephen@xemacs.org>

	* EmacsShell-sub.c (RootGeometryManager):
	Change garbage to useful messages under DEBUG_GEOMETRY_MANAGEMENT.
	Based on a suggestion by Francois L'Archeveque.

2006-05-02  Stephen J. Turnbull  <stephen@xemacs.org>

	* doc.c (extract_object_file_name): Fix buffer overrun.

2006-04-30  Stephen J. Turnbull  <stephen@xemacs.org>

	Move geometry management from EmacsFrameResize to x_set_frame_size.
	Should fix "metacity maximization" bug.
	Provide (deprecated, temporary) backward compatibility option.

	* EmacsFrame.c (EmacsFrameResize):
	* frame-x.c (x_set_frame_size):
	Move call of EmacsManagerChangeSize.
	Don't bogusly notify WM about size changes the WM asked for.

	* console-x.c (wedge-metacity): New builtin Boolean Lisp variable.
	* console-x-impl.h (wedge_metacity): Declare C variable.
	* console-x.c (vars_of_console_x): New function to initialize it.
	* symsinit.h (vars_of_console_x): declare it.
	* emacs.c (main_1): Call vars_of_console_x.

	* EmacsFrameP.h (struct EmacsFrame):
	* EmacsManager.c (EmacsManagerChangeSize):
	* EmacsShell-sub.c (SuperClassRootGeometryManager):
	* console-x-impl.h (wedge_metacity):